# inst-decoding-8086

./: Cargo.toml  LICENSE.md  Readme.md  justfile
.github/actions-rs/: grcov.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  utils.rs
src/instruction_set/: bit.rs  errors.rs  instruction.rs  mod.rs  opcodes.rs  registers.rs
tests/: integration_test.rs
